# Projects

./: .gitignore  README.md  data
AAisoPeak/: .Rbuildignore  DESCRIPTION  NAMESPACE  Rcpp note.md  Rcpp note.rmd  configure.sh
AAisoPeak/R/: RcppExports.R  package.R  plot.AAspectra.R
AAisoPeak/man/: AAspectra-class.Rd  getAAspectra.Rd  getFilterThreshold.Rd  getPrecursorSpectra.Rd  getSipBYionSpectra.Rd  getSipPrecursorSpectra.Rd  peak_calculator.Rd  peak_calculator_DIY.Rd  plot.AAspectra.Rd  readAllScanMS2.Rd  readScansMS1.Rd
AAisoPeak/rmd/: Scan frequence analysis.Rmd
AAisoPeak/src/: Makevars  RcppExports.cpp  filterPSMs.cpp  getISOpeak.cpp  readScan.cpp  readScans.cpp
AAisoPeak/src/lib/: PSMsFiltrator.cpp  PSMsFiltrator.h  ftFileReader.cpp  ftFileReader.h  isotopologue.h  peptidesFiltrator.cpp  sipFileReader.cpp  sipFileReader.h
AAisoPeak/tests/: testthat.R
AAisoPeak/tests/testthat/: test-peak_calculator.R  test-peak_calculator_DIY.R
Aerith/: DESCRIPTION  NAMESPACE  Rcpp note.rmd
Aerith/R/: RcppExports.R  plotAAspectra.R  plotPSMs.R  plotProteinSipPct.R
Aerith/man/: AAspectra-class.Rd  getRealScan.Rd  getRealScans.Rd  getUnfilteredPSMs.Rd  readAllScanMS2.Rd
Aerith/rmd/AMD15N/: AMD15N.qmd
Aerith/rmd/DIA/: DIA.Rmd
Aerith/rmd/PSM check/: Pct50 PSM check.Rmd
Aerith/rmd/Scan frequence analysis/: Scan frequence analysis.Rmd
Aerith/rmd/TIC analysis/: TIC analysis.Rmd
Aerith/rmd/compareDifferentSoftwares/: compareDifferentSoftwares.Rmd
Aerith/rmd/differentIsolationWindowSize/: differentIsolationWindowSize.Rmd
Aerith/rmd/ecoliIontrapPCT25check/: ecoliIonPCT25check.Rmd
Aerith/rmd/ecoliPCT0/: ecoliPCT0.Rmd
Aerith/rmd/ecoliPCT25check/: ecoliPCT25check.Rmd
Aerith/rmd/ecoliPCT25orbit90min/: ecoliPCT25orbit90min.Rmd
Aerith/rmd/ecoliPCT50changeWindows/: ecoliPCT50changeWindows.Rmd
Aerith/rmd/ecoliPCT50iso08/: ecoliPCT50iso08.Rmd
Aerith/rmd/ecoliPCT50iso15/: ecoliPCT50iso15.Rmd
Aerith/rmd/ecoliPCT50orbit90min/: ecoliPCT50orbit90min.Rmd
Aerith/rmd/ecoliSIPresultWithTrouble/: ecoliSIPresultWithTrouble.Rmd
Aerith/rmd/fft/: fft.Rmd
Aerith/rmd/outputForPercolator/: outPutForPercolator.Rmd
Aerith/rmd/read denoise and write MS2/: demo.ft2  read denoise and write MS2.Rmd
Aerith/rmd/readMzml/: readMzml.Rmd
Aerith/rmd/siprosScoreFunctionOptimize/: scoreFunctionOptimize.Rmd
Aerith/rmd/testPrecursorWindows/: testPrecursorWindows.Rmd
Aerith/src/: RcppExports.cpp  filterPeptides.cpp  generateCFG.cpp  getISOpeak.cpp  readScans.cpp  readSips.cpp  scorePSM.cpp
Aerith/src/lib/: PSMsFiltrator.cpp  cfgParser.cpp  ftFileReader.cpp  ftFileReader.h  ftFileWriter.cpp  initSIP.h  isotopologue.cpp  ms2scan.h  sipFileReader.cpp
CppProjectTemplate/: CMakeLists.txt  make
ProRata/src/: CMakeLists.txt  make
ProRata/src/Common/: CMakeLists.txt
ProRata/src/PRatio/: CMakeLists.txt  DriverProteomeInfo.cpp
ProRata/src/PRatio/include/: nr.h  pca.h  peakPicker.h  peptideInfo.h  peptideLabelFree.h  peptideRatio.h  proteinInfo.h  proteinRatio.h  proteomeInfo.h  smoother.h
ProRata/src/PRatio/src/: lubksb.c  ludcmp.c  pca.cpp  pcaUtility.c  peakPicker.cpp  peptideInfo.cpp  peptideLabelFree.cpp  peptideRatio.cpp  proteinInfo.cpp  proteinRatio.cpp  proteomeInfo.cpp  savgol.c  smoother.cpp
ProRata/src/SicForma/: CMakeLists.txt
Raxport.net/: Raxport.cs
Raxport/release/RaxportOMP/: install.bat
Raxport/src/: CMakeLists.txt  raxport.cpp  raxportOMP.cpp  raxport_loadDll.cpp  test.cpp
SIPmkl/: MKLnote.md
SIPmkl/lib/: isotopologue.h
SIPmkl/test/: SiprosConfigN15SIP.cfg  elementAbundanceTest.cpp  mkl.cpp  vectorSumMultiply.cpp
Sipros3.0/Sipros-src/: SiprosV3note.md  make  test_capture.prof
Sipros3.0/Sipros-src/include/: isotopologue.h
Sipros3.0/Sipros-src/mpi/: CMakeLists.txt
Sipros3.0/Sipros-src/openmp/: CMakeLists.txt  main.cpp
Sipros3.0/Sipros-src/src/: isotopologue.cpp
Sipros3.0/SiprosOnServer/: SiprosV3note.md
Sipros3.0/test/: ParseSipPercent.R  checkOutputFileList.R
SiprosCmake/: CMakeLists.txt
SiprosDevelop/note/: SiprosV3note.md
SiprosDevelop/trunk/: CMakeLists.txt  make
SiprosDevelop/trunk/include/: peptide.h
SiprosDevelop/trunk/mpi/: CMakeLists.txt
SiprosDevelop/trunk/openmp/: CMakeLists.txt
SiprosDevelop/trunk/test/: main.cpp
SiprosGUI/: config.cpp  config.h  mainwindow.cpp  mainwindow.ui
SiprosLearn/: SiprosLearn.pro  note.md
SiprosLearn/lib/: Makefile
SiprosTest/: CMakeLists.txt  make
SiprosTest/test/: CMakeLists.txt  ParseSipPercent.R  SiprosConfigC13SIP.cfg  main.cpp  note.html  note.md
configGenerator/src/: main.cpp
helloworld/: findDuplicate.cpp  helloworld.cpp  listNode.cpp  pointer.cpp  stringToInteger.cpp  vector2arrary.cpp  vectorPointerAfterRelease.cpp
learnSipros/Sipros/: note.md
learnSipros/test/AMD/siprosV3/Sipros-src/: CMakeLists.txt  SiprosV3note.md  make
learnSipros/test/AMD/siprosV3/Sipros-src-Array/: CMakeLists.txt  SiprosV3note.md  TBBnote.md  make  test_capture.prof
learnSipros/test/AMD/siprosV3/Sipros-src-Array/include/: isotopologue.h
learnSipros/test/AMD/siprosV3/Sipros-src-Array/mpi/: CMakeLists.txt
learnSipros/test/AMD/siprosV3/Sipros-src-Array/openmp/: CMakeLists.txt  test_capture.prof
learnSipros/test/AMD/siprosV3/Sipros-src-Array/src/: isotopologue.cpp
learnSipros/test/AMD/siprosV3/Sipros-src-Array/test/: CMakeLists.txt
learnSipros/test/AMD/siprosV3/Sipros-src/include/: isotopologue.h
learnSipros/test/AMD/siprosV3/Sipros-src/src/: isotopologue.cpp
learnSipros/test/AMD/siprosV3/Sipros-src/timeCompare/: SiprosV3ompGper  SiprosV3ompGper2  SiprosV3ompGperNoReserve  SiprosV3ompGperO3  SiprosV3ompNewSum  SiprosV3ompNewSumReserve  SiprosV3ompNewSumStatic  SiprosV3ompNoReserve  SiprosV3ompOldSum  SiprosV3ompOldSumReserve  SiprosV3ompReserve  compareTime.sh
login/: login.pro  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myResources.qrc
mstoolkit/: MSSingleScan
nWindows/: CMakeLists.txt  logindialog.cpp  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.ui
readRAW/: CMakeLists.txt  main.cpp
(+81 files in other folders)
